--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ Other affiliations:</p>
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
+<li><p>2025, University of Pennsylvania Computational Linguistics lunch</p>
+</li>
 <li><p>2024, University of Cambridge the Language Technology Lab seminar (<a href="https://danielkhashabi.com//files/2024_cambridge_talk/2024-cambridge2.pdf">slides</a>)</p>
 </li>
 <li><p>2024, Oracle Labs ML seminar (<a href="http://danielkhashabi.com/files/2024_oracle/2024-oracle.pdf">slides</a>)</p>
@@ -80,13 +82,13 @@ Other affiliations:</p>
 </li>
 <li><p>2023, NYU &lsquo;&lsquo;Text-as-Data&rsquo;&rsquo; talk series (<a href="http://danielkhashabi.com/files/2023_nyu/2023-nyu2-slides.pdf">slides</a>)</p>
 </li>
-<li><p>2023, JHU's Center for Language and Speech Technologies seminar (<a href="https://www.youtube.com/watch?v=YuxmtgBk-Ls">video</a>)</p>
+<li><p>2023, Hopkins Center for Language and Speech Technologies seminar (<a href="https://www.youtube.com/watch?v=YuxmtgBk-Ls">video</a>)</p>
 </li>
-<li><p>2023, JHU's Electrical Engineering department seminars (<a href="http://danielkhashabi.com/files/2023_ece_talk/2023-ece-jhu.pdf">slides</a>)</p>
+<li><p>2023, Hopkins Electrical Engineering department seminars (<a href="http://danielkhashabi.com/files/2023_ece_talk/2023-ece-jhu.pdf">slides</a>)</p>
 </li>
 <li><p>2023, Amazon &lsquo;&lsquo;Human in the Loop&rsquo;&rsquo; seminar</p>
 </li>
-<li><p>2023, JHU's Center for Health Security seminars (<a href="http://danielkhashabi.com/files/2023_public_health/2023-jhu-public-health-split.pdf">slides</a>)</p>
+<li><p>2023, Hopkins Center for Health Security seminars (<a href="http://danielkhashabi.com/files/2023_public_health/2023-jhu-public-health-split.pdf">slides</a>)</p>
 </li>
 <li><p>2023, UMD Computational Linguistics seminar (<a href="http://danielkhashabi.com/files/2023_umd_talk/umd-talk-2023-split.pdf">slides</a>)</p>
 </li>
@@ -128,7 +130,7 @@ Other affiliations:</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2025.01.15.633272v1"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and Faraz Faghri. <br />   <font color="Gray">biorxiv preprint 2025.01.15.63327</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a></font></p>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2025.01.15.633272v1"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">biorxiv preprint 2025.01.15.63327</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -144,7 +146,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, <a href="https://yeganehkordi.github.io/"><font color="Black"> Yeganeh Kordi</font></a>, Tanay Nayak, Ado Asija, <a href="https://homes.cs.washington.edu/~yizhongw/"><font color="Black"> Yizhong Wang</font></a>, Kate Sanders, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/turking-bench">[data]</a> <a href="https://turkingbench.github.io/">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, <a href="https://yeganehkordi.github.io/"><font color="Black"> Yeganeh Kordi</font></a>, Tanay Nayak, Adi Asija, <a href="https://homes.cs.washington.edu/~yizhongw/"><font color="Black"> Yizhong Wang</font></a>, Kate Sanders, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/turking-bench">[data]</a> <a href="https://turkingbench.github.io/">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -160,7 +162,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Discriminating Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Discriminating Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2025_selfincorrect/2025_AAAI_Presentation.key">[slides]</a> <a href="https://youtu.be/z3-AMZ7bdCw">[talk]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -204,15 +206,15 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.11399"><b>k-SemStamp: A Clustering-Based Semantic Watermark for Detection of Machine-Generated Text.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Yichen Wang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Tianxing He. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2402.11399"><b>k-SemStamp: A Clustering-Based Semantic Watermark for Detection of Machine-Generated Text.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Yichen Wang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://cloudygoose.github.io/"><font color="Black"> Tianxing He</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.18678"><b>RORA: Robust Free-Text Rationale Evaluation.</b></a>  <br />    <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Hanjie Chen, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2402.18678"><b>RORA: Robust Free-Text Rationale Evaluation.</b></a>  <br />    <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://hanjiechen.github.io/"><font color="Black"> Hanjie Chen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Tianxing He, Yichen Wang, Yung-Sung Chuang, Hongwei Wang, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Yulia Tsvetkov. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://cloudygoose.github.io/"><font color="Black"> Tianxing He</font></a>, Yichen Wang, Yung-Sung Chuang, Hongwei Wang, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~yuliats/"><font color="Black"> Yulia Tsvetkov</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -256,7 +258,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2211.00053"><b>Generating Sequences by Learning to Self-Correct.</b></a>  <br />    <a href="https://wellecks.com/"><font color="Black"> Sean Welleck</font></a>, Ximing Lu, Peter West, Faeze Brahman, <a href="https://shentianxiao.github.io/"><font color="Black"> Tianxiao Shen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2023. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2211.00053"><b>Generating Sequences by Learning to Self-Correct.</b></a>  <br />    <a href="https://wellecks.com/"><font color="Black"> Sean Welleck</font></a>, Ximing Lu, <a href="https://peterwestai.notion.site/"><font color="Black"> Peter West</font></a>, Faeze Brahman, <a href="https://shentianxiao.github.io/"><font color="Black"> Tianxiao Shen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2023. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -300,7 +302,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2112.08726"><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics.</b></a>  <br />    Ximing Lu, <a href="https://wellecks.com/"><font color="Black"> Sean Welleck</font></a>, Peter West, Liwei Jiang, Jungo Kasai, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Ronan Le Bras, <a href="https://lianhui.ucsd.edu/"><font color="Black"> Lianhui Qin</font></a>, Youngjae Yu, Rowan Zellers, <a href="https://nasmith.github.io/"><font color="Black"> Noah A. Smith</font></a> and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2022. <b>Best paper award.</b> <font size=-1><a href="https://github.com/GXimingLu/neurologic_decoding">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2112.08726"><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics.</b></a>  <br />    Ximing Lu, <a href="https://wellecks.com/"><font color="Black"> Sean Welleck</font></a>, <a href="https://peterwestai.notion.site/"><font color="Black"> Peter West</font></a>, Liwei Jiang, Jungo Kasai, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Ronan Le Bras, <a href="https://lianhui.ucsd.edu/"><font color="Black"> Lianhui Qin</font></a>, Youngjae Yu, Rowan Zellers, <a href="https://nasmith.github.io/"><font color="Black"> Noah A. Smith</font></a> and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2022. <b>Best paper award.</b> <font size=-1><a href="https://github.com/GXimingLu/neurologic_decoding">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -453,7 +455,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-22 21:31:44 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-02-11 23:44:07 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
