--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Other affiliations:</p>
 </li>
 <li><p><i>Self-supervised learning</i> of representations of the world using cheap signals in the wild (web data, physical environment, etc.) in an algorithmically efficient (data and compute) manner.</p>
 </li>
-<li><p><i>Reasoning</i>: Improving models&rsquo; ability to communicate via <i>reasons</i>, for novel problem-solving (recovering from earlier mistakes) and also explainability (using “reasons” to explain or justify decisions).</p>
+<li><p><i>Reasoning</i>: Improving models&rsquo; ability to communicate via <i>reasons</i>, for creative problem-solving (recovering from earlier mistakes) and also explainability (using “reasons” to explain or justify decisions).</p>
 </li>
 <li><p><i>Interpretability</i>: Analyzing model operations to help humans understand behaviors, e.g., how does in-context learning emerge or operate? How do LMs balance between &lsquo;remembering&rsquo; and &lsquo;learning&rsquo;?</p>
 </li>
@@ -154,15 +154,19 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2410.08968"><b>Controllable Safety Alignment: Inference-Time Adaptation to Diverse Safety Requirements.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2410.08968"><b>Controllable Safety Alignment: Inference-Time Adaptation to Diverse Safety Requirements.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="https://github.com/microsoft/controllable-safety-alignment">[code]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2407.07778"><b>WorldAPIs: The World Is Worth How Many APIs? A Thought Experiment.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1><a href="https://youtu.be/9Rrv7QPwS_Y">[talk]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2407.07778"><b>WorldAPIs: The World Is Worth How Many APIs? A Thought Experiment.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1><a href="https://youtu.be/9Rrv7QPwS_Y">[talk]</a> <a href="http://danielkhashabi.com/files/2025_worldapi/WorldAPI_AAAI_2025_Poster.pdf">[poster]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Discriminating Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2025_selfincorrect/2025_AAAI_Presentation.key">[slides]</a> <a href="https://youtu.be/z3-AMZ7bdCw">[talk]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Discriminating Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2025_selfincorrect/2025_AAAI_Presentation.key">[slides]</a> <a href="https://youtu.be/z3-AMZ7bdCw">[talk]</a> <a href="https://docs.google.com/presentation/d/1Iku_cTG-B4LTycUSXKJ8UfF3L5zdROL0oRDmdl0VZD8/edit?usp=sharing">[poster]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://www.acpjournals.org/doi/abs/10.7326/ANNALS-25-00012"><b>Large Language Models for Screening Search Results in Systematic Reviews: Are We There Yet?</b></a>  <br />    S Swaroop Vedula and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annals of Internal Medicine - American College of Physicians</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -455,7 +459,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-11 23:44:07 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-01 17:48:51 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
