--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Other affiliations:</p>
 </ul>
 </td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
-<p>Broadly, my research is motivated by <b>making AI</b> (1) <b>helpful</b> and (2) <b>efficient</b>.</p>
+<p>Broadly, my research is motivated by <b>making language-driven AI</b> (1) <b>helpful</b> and (2) <b>efficient</b>.</p>
 <p>In pursuit of these objectives, my team and I have made various endeavors toward the following more specific themes:</p>
 <ul>
 <li><p><i>Augmentation</i>: Developing computational models that synergistically augment human experience. The ultimate goal of our work is to benefit humans!</p>
@@ -459,7 +459,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 00:50:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-09 22:36:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
