--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Other affiliations:</p>
 </li>
 <li><p><a href="https://iaa.jhu.edu/">Institute for Assured Autonomy</a></p>
 </li>
+<li><p><a href="https://www.idies.jhu.edu/">Institute for Data-Intensive Engineering and Science</a></p>
+</li>
 </ul>
 </td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
@@ -130,7 +132,7 @@ Other affiliations:</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2025.01.15.633272v1"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">biorxiv preprint 2025.01.15.63327</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a> <a href="https://www.datatecnica.com/blog/can-gpt-45-claude-37-and-gemini-20-keep-up-with-biomedical-research-a-benchmark-update">[blog]</a></font></p>
+<li><p><a href="https://pubmed.ncbi.nlm.nih.gov/39868292/"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">biorxiv preprint 2025.01.15.63327</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a> <a href="https://www.datatecnica.com/blog/can-gpt-45-claude-37-and-gemini-20-keep-up-with-biomedical-research-a-benchmark-update">[blog]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -463,7 +465,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-14 20:01:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-18 11:43:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
