--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Other affiliations:</p>
 </ul>
 </td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
-<p>Broadly, my research is motivated by <b>making natural language-driven AI system</b> (1) <b>helpful</b> and (2) <b>efficient</b>.</p>
+<p>Broadly, my research is anchored around <b>natural language as a key communication medium</b> for AI systems and is motivated by <b>making AI systems</b> (1) <b>helpful</b> and (2) <b>efficient</b>.</p>
 <p>In pursuit of these objectives, my team and I have made various endeavors toward the following more specific themes:</p>
 <ul>
 <li><p><i>Augmentation</i>: Developing computational models that synergistically augment human experience. The ultimate goal of our work is to benefit humans!</p>
@@ -156,7 +156,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2411.11844"><b>Generative World Explorer.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/pdf/2411.11844"><b>Generative World Explorer.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/Jieneng_GenEx_Short_Jan.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2025_genex/Genex_ICLR_Poster_white_background.pdf">[poster]</a> <a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -465,7 +465,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-20 11:27:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-20 17:24:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
