--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Other affiliations:</p>
 </li>
 <li><p><i>Interaction</i>: Effectively engaging with humans and other AI systems for, for example, coordination.</p>
 </li>
-<li><p><i>Applications of AI</i>: We are excited about the increased adoption of AI! We have ongoing work on AI for {science, education, and clinical applications}.</p>
+<li><p><i>Applications of AI</i>: We are excited about the increased adoption of AI! We have ongoing work on AI for science and clinical applications.</p>
 </li>
 </ul>
 <p>The dominant majority of my research is aligned with the following research communities: <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i>  (ICLR, NeurIPS, ICML), and <i>artificial intelligence</i> (AAAI, IJCAI).</p>
@@ -304,7 +304,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2104.08773"><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions.</b></a>  <br />    <a href="https://swarooprm.github.io/"><font color="Black"> Swaroop Mishra</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Chitta Baral and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2022. <font size=-1><a href="http://danielkhashabi.com/files/2021_natural_insructions/ai2-talk-may-2021.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=DbUXFCmeJ34">[talk]</a> <a href="https://github.com/allenai/natural-instructions">[code]</a> <a href="https://instructions.apps.allenai.org/">[project]</a> <a href="https://blog.allenai.org/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">[blog]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2104.08773"><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions.</b></a>  <br />    <a href="https://swarooprm.github.io/"><font color="Black"> Swaroop Mishra</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Chitta Baral and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2022. <b>AI2's lasting impact award.🏆</b> <font size=-1><a href="http://danielkhashabi.com/files/2021_natural_insructions/ai2-talk-may-2021.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=DbUXFCmeJ34">[talk]</a> <a href="https://github.com/allenai/natural-instructions">[code]</a> <a href="https://instructions.apps.allenai.org/">[project]</a> <a href="https://blog.allenai.org/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">[blog]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -465,7 +465,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-20 17:48:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-22 00:01:10 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
