--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Other affiliations:</p>
 </ul>
 </td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
-<p>Broadly, my research is anchored around <b>natural language as a key communication medium</b> for AI systems and is motivated by <b>making AI systems</b> (1) <b>helpful</b> and (2) <b>efficient</b>.</p>
+<p>Broadly, my research is anchored around <b>natural language as a key communication medium</b> and is motivated by <b>making AI systems</b> (1) <b>helpful</b> and (2) <b>efficient</b>.</p>
 <p>In pursuit of these objectives, my team and I have made various endeavors toward the following more specific themes:</p>
 <ul>
 <li><p><i>Augmentation</i>: Developing computational models that synergistically augment human experience. The ultimate goal of our work is to benefit humans!</p>
@@ -465,7 +465,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-22 00:01:10 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-24 23:00:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
