--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2503.21717"><b>CLAIMCHECK: How Grounded are LLM Critiques of Scientific Papers?</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, William Gantt Walden, Kate Sanders, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, William Jurayj, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, Weiqi Wang, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2503.21717</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2503.09639"><b>Can A Society of Generative Agents Simulate Human Behavior and Inform Public Health Policy? A Case Study on Vaccine Hesitancy.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, Hongru Du, Yichen Wang, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Zixiao Wang, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Lauren Gardner and <a href="https://cloudygoose.github.io/"><font color="Black"> Tianxing He</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2503.09639</font>, 2025. <font size=-1><a href="https://github.com/abehou/VacSim">[code]</a></font></p>
 </li>
 </ul>
@@ -465,7 +469,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-24 23:00:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-29 12:45:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
